# demiurge-arduino

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  library.properties
examples/Envelope/: Envelope.ino
examples/ManualMixer/: ManualMixer.ino
examples/VCA/: VCA.ino
examples/VCO/: VCO.ino
examples/envelope/: Envelope.ino
examples/vca/: VCA.ino
examples/vco/: VCO.ino
src/: Adder.cpp  Adder.h  Adsr.cpp  Adsr.h  AudioInPort.cpp  AudioInPort.h  AudioOutPort.cpp  AudioOutPort.h  Averager.cpp  Averager.h  Calculator.cpp  Calculator.h  Clipping.cpp  Clipping.h  ControlPair.cpp  ControlPair.h  Cordic.cpp  Cordic.h  CvInPort.cpp  CvInPort.h  CvOutPort.cpp  CvOutPort.h  Demiurge.cpp  Demiurge.h  FixedSignal.cpp  FixedSignal.h  GateInPort.cpp  GateInPort.h  GateOutPort.cpp  GateOutPort.h  GatePort.cpp  GatePort.h  GhostSignal.cpp  GhostSignal.h  Inverter.cpp  Inverter.h  LED.cpp  LED.h  Log.cpp  Log.h  (+44 more)
src/adc128s102/: ADC128S102.cpp  ADC128S102.h
src/mcp4822/: MCP4822.cpp  MCP4822.h
src/mcp48x2/: MCP48x2.cpp  MCP48x2.h
src/spi/: aaa_spi.c  aaa_spi.h
